# App-Manager

./: .gitignore  AGENTS.md  Cargo.toml  README.md  package.json  pnpm-workspace.yaml
.github/workflows/: release-desktop.yml  repair-release-notes.yml
crates/process-core/: Cargo.toml
crates/process-core/src/: applications.rs  error.rs  lib.rs  model.rs  (+3 more)
crates/process-sidecar/: Cargo.toml
desktop/: README.md  electron-builder.yml  index.html  package.json  tsconfig.electron.json  tsconfig.json  vite.config.ts
desktop/electron/: branding.cts  branding.test.ts  electronBuilderConfig.test.ts  main.cts  preload.cts
desktop/scripts/: collect-release-assets.mjs  collect-release-assets.test.ts  generate-release-notes.mjs  macos-app-session.mjs  open-macos-preview.mjs  prepare-sidecar.mjs  run-electron-builder.mjs  run-electron-dev.mjs  verify-release-version.mjs
desktop/src/: App.test.tsx  App.tsx  main.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src-tauri/src/commands/: processes.rs
docs/brainstorms/: 2026-07-22-cross-platform-desktop-tech-selection-requirements.md
docs/plans/: 2026-07-22-001-feat-tauri-desktop-foundation-plan.md  2026-07-22-002-feat-activity-monitor-ui-redesign-plan.md  2026-07-22-003-refactor-electron-desktop-runtime-plan.md  2026-07-23-004-feat-port-occupancy-management-plan.md  2026-07-23-005-feat-app-update-check-plan.md  2026-07-24-006-feat-application-tree-view-plan.md  2026-07-24-007-feat-in-app-update-download-plan.md
docs/templates/: github-release-runbook-template.md
(+68 files in other folders)
