[package]
name = "app-manager-desktop"
version = "0.1.0"
description = "Desktop shell for App Manager"
edition = "2021"

[lib]
name = "app_manager_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
process-core = { path = "../../crates/process-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
